--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-numpy
-opencv-python-headless
-mediapipe
-streamlit
-streamlit_webrtc
+streamlit==1.31.0
+streamlit-webrtc==0.47.1
+mediapipe==0.10.9
+opencv-python==4.9.0.80
+numpy==1.26.4
+aiortc==1.5.0
