--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
-streamlit==1.31.0
+# requirements.txt
+streamlit>=1.24.0
 streamlit-webrtc==0.47.1
-mediapipe==0.10.9
-opencv-python==4.9.0.80
-numpy==1.26.4
+mediapipe==0.10.5
+opencv-python-headless==4.8.1.78
+numpy>=1.24.3
 aiortc==1.5.0
+av==10.0.0
+typing-extensions>=4.5.0
+attrs>=23.1.0
+protobuf>=3.20.3,<4.0.0
